refactor: update import statements and improve loop structure in services